<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_setting"
        android:title="@string/item_setting"
        android:orderInCategory="0"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_about_us"
        android:title="@string/about_us"
        android:orderInCategory="4"
        app:showAsAction="never"
        android:icon="@drawable/ic_info_white_24dp" />

    <item
        android:id="@+id/action_my_dictionaries"
        android:title="@string/my_dictionaries"
        android:orderInCategory="1"
        app:showAsAction="never"
        android:icon="@drawable/ic_info_white_24dp" />

    <item
        android:id="@+id/action_statistic"
        android:title="@string/statistic"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:icon="@drawable/ic_info_white_24dp" />

    <item
        android:id="@+id/action_calendar"
        android:title="@string/calendar"
        android:orderInCategory="3"
        app:showAsAction="never"
        android:icon="@drawable/ic_info_white_24dp" />

</menu>