<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent" android:layout_height="match_parent">

<ImageView
    android:id="@+id/LibraryImageView"
    android:contentDescription="@string/dictionary_image"
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:layout_gravity="start"
    android:src="@drawable/ic_book_black_24dp"/>

    <Button
        android:id="@+id/openExerciseButt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/study_butt"
        android:layout_alignParentEnd="true"
        android:focusable="false" />

<TextView
    android:id="@+id/LibraryNameTextView"
    android:layout_width="wrap_content"
    android:layout_height="?android:attr/listPreferredItemHeightSmall"
    android:layout_toStartOf="@id/openExerciseButt"
    android:layout_toEndOf="@id/LibraryImageView"
    android:layout_marginEnd="8dp"
    android:layout_gravity="end"
    android:text="@string/textItemList"
    android:gravity="start|center_vertical"
    android:paddingStart="?android:attr/listPreferredItemPaddingLeft"
    android:paddingEnd="?android:attr/listPreferredItemPaddingRight"
    android:textAppearance="?android:attr/textAppearanceListItemSmall" />

</RelativeLayout>