<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.wordtrainer20.SelectExerciseActivity">

    <TextView
        android:id="@+id/ExerciseOneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/exercise_one"
        app:layout_constraintLeft_toLeftOf="@+id/ExerciseOneImageButton"
        app:layout_constraintRight_toRightOf="@+id/ExerciseOneImageButton"
        app:layout_constraintTop_toBottomOf="@+id/ExerciseOneImageButton" />

    <TextView
        android:id="@+id/ExerciseTwoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_two"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ExerciseTwoImageButton"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/ExerciseTwoImageButton"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/ExerciseTwoImageButton" />

    <TextView
        android:id="@+id/ExerciseThreeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_three"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/ExerciseThreeImageButton"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/ExerciseThreeImageButton"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ExerciseThreeImageButton" />

    <TextView
        android:id="@+id/ExerciseFourTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_four"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/ExerciseFourImageButton"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/ExerciseFourImageButton"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ExerciseFourImageButton" />

    <ImageButton
        android:id="@+id/ExerciseOneImageButton"
        android:contentDescription="@string/exercise_one"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/task_image"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.216"
        app:layout_constraintRight_toLeftOf="@+id/ExerciseTwoImageButton"
        android:layout_marginEnd="64dp" />

    <ImageButton
        android:id="@+id/ExerciseTwoImageButton"
        android:contentDescription="@string/exercise_two"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/task_image"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.216" />

    <ImageButton
        android:id="@+id/ExerciseThreeImageButton"
        android:contentDescription="@string/exercise_three"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="63dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/ExerciseFourImageButton"
        app:layout_constraintTop_toBottomOf="@+id/ExerciseOneImageButton"
        app:layout_constraintVertical_bias="0.451"
        app:srcCompat="@drawable/task_image" />

    <ImageButton
        android:id="@+id/ExerciseFourImageButton"
        android:contentDescription="@string/exercise_four"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/task_image"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ExerciseTwoImageButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/ExerciseTwoImageButton"
        app:layout_constraintVertical_bias="0.451" />

</android.support.constraint.ConstraintLayout>
